@@ -22,14 +22,12 @@
 #  If not, write to the Free Software Foundation,
 #  59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-before-all::
-	cd ..;rm -f ProjectCenter;$(LN_S) Library ProjectCenter
+#before-all::
+#	cd ..;rm -f ProjectCenter;$(LN_S) Library ProjectCenter
 
-after-clean::
-	rm -f ../ProjectCenter
+#after-clean::
+#	rm -f ../ProjectCenter
 
-after-uninstall::
-#	rm -rf $(GNUSTEP_SYSTEM_ROOT)/Library/Headers/ProjectCenter
-#	rm -rf $(GNUSTEP_SYSTEM_ROOT)/Library/Libraries/Resources/ProjectCenter
-	rm -rf $(GNUSTEP_SYSTEM_ROOT)/Library/Libraries/libProjectCenter*
+#after-uninstall::
+#	rm -rf $(GNUSTEP_SYSTEM_ROOT)/Library/Libraries/libProjectCenter*
 
