@@ -22,8 +22,8 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 */
 
-#include "ProjectCenter/PCFileCreator.h"
-#include "ProjectCenter/PCMakefileFactory.h"
+#include <ProjectCenter/PCFileCreator.h>
+#include <ProjectCenter/PCMakefileFactory.h>
 
 #include "PCAggregateProj.h"
 #include "PCAggregateProject.h"
