@@ -22,10 +22,11 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 */
 
+#include <ProjectCenter/PCMakefileFactory.h>
+
 #include "PCAggregateProject.h"
 #include "PCAggregateProj.h"
 
-#include <ProjectCenter/PCMakefileFactory.h>
 
 @implementation PCAggregateProject
 
