@@ -25,9 +25,9 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 */
 
-#include "ProjectCenter/PCFileCreator.h"
-#include "ProjectCenter/PCFileManager.h"
-#include "ProjectCenter/PCMakefileFactory.h"
+#include <ProjectCenter/PCFileCreator.h>
+#include <ProjectCenter/PCFileManager.h>
+#include <ProjectCenter/PCMakefileFactory.h>
 
 #include "PCAppProj.h"
 #include "PCAppProject.h"
