@@ -29,7 +29,7 @@
 #include "PCPrefController.h"
 #include "PCLogController.h"
 
-#include <ProjectCenter/ProjectCenter.h>
+#include "Library/ProjectCenter.h"
 
 @implementation PCAppController
 
