@@ -1,3 +1,11 @@
+2005-11-10  Adam Fedor  <fedor@gnu.org>
+
+        * GNUmakefile.postamble: Add some hacks to copy header files on
+        Windows machines.
+        * GNUmakefile.preamble: Correct libs
+        * Library/GNUmakefile.postamble: Don't make dir links
+        * Modules/GNUmakefile.bundles: Add bundle libs on Windows.
+
 2005-07-03 Serg Stoyan <stoyan255@ukr.net>
 
 	* Library/PCButton: (mouseMoved:) check if ttWindow is not nil.
